--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -35,6 +35,47 @@
       <property name="frameShadow">
        <enum>QFrame::Shadow::Raised</enum>
       </property>
+      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1">
+       <property name="rightMargin">
+        <number>9</number>
+       </property>
+       <item>
+        <layout class="QHBoxLayout" name="filePathLayout">
+         <item>
+          <widget class="QLabel" name="pathLabel">
+           <property name="font">
+            <font>
+             <pointsize>15</pointsize>
+             <italic>false</italic>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>Database file:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="pathLineEdit">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(192, 191, 188);
+color: rgb(0, 0, 0);</string>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="credentialsLayout">
+         <item>
+          <widget class="QListWidget" name="listWidget"/>
+         </item>
+        </layout>
+       </item>
+      </layout>
      </widget>
     </item>
     <item>
