--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -17,7 +17,10 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>CREDEX 0.1.3</string>
+   <string>CREDEX 0.1.4</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(11, 68, 88);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout" stretch="3,1">
@@ -49,6 +52,9 @@
              <italic>false</italic>
              <bold>true</bold>
             </font>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">color: rgb(255, 255, 255);</string>
            </property>
            <property name="text">
             <string>Database file:</string>
@@ -99,6 +105,9 @@ color: rgb(0, 0, 0);</string>
      <width>1280</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
    </property>
    <widget class="QMenu" name="menu_File">
     <property name="title">
