--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>CREDEX 0.1.4</string>
+   <string>CREDEX 0.1.5</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(11, 68, 88);</string>
@@ -181,10 +181,10 @@ color: rgb(0, 0, 0);</string>
   </action>
   <action name="actionCreate_New">
    <property name="text">
-    <string>Add Record</string>
+    <string>Create Record</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+N</string>
+    <string>Ctrl+R</string>
    </property>
   </action>
   <action name="actionSet_DB_Password">
