--- a/ui/password_dialog.ui
+++ b/ui/password_dialog.ui
@@ -101,6 +101,32 @@ color: rgb(0, 0, 0);</string>
     <string>Password confirmation</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="showPushButton">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>80</y>
+     <width>51</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Show</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="showPushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>160</y>
+     <width>51</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Show</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections>
