--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>CREDEX 0.1.5</string>
+   <string>CREDEX 0.2.0</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(11, 68, 88);</string>
@@ -32,6 +32,9 @@
     </property>
     <item>
      <widget class="QFrame" name="frame">
+      <property name="styleSheet">
+       <string notr="true">border-color: rgb(255, 255, 255);</string>
+      </property>
       <property name="frameShape">
        <enum>QFrame::Shape::StyledPanel</enum>
       </property>
@@ -64,7 +67,7 @@
          <item>
           <widget class="QLineEdit" name="pathLineEdit">
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(192, 191, 188);
+            <string notr="true">background-color: rgb(222, 221, 218);
 color: rgb(0, 0, 0);</string>
            </property>
            <property name="readOnly">
@@ -79,7 +82,7 @@ color: rgb(0, 0, 0);</string>
          <item>
           <widget class="QTableWidget" name="tableWidget">
            <property name="styleSheet">
-            <string notr="true">background-color: rgb(246, 245, 244);
+            <string notr="true">background-color: rgb(222, 221, 218);
 color: rgb(0, 0, 0);</string>
            </property>
            <property name="columnCount">
@@ -125,7 +128,7 @@ color: rgb(0, 0, 0);</string>
     <item>
      <widget class="QTextEdit" name="logTextEdit">
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(192, 191, 188);
+       <string notr="true">background-color: rgb(222, 221, 218);
 color: rgb(0, 0, 0);</string>
       </property>
       <property name="readOnly">
